# openvoicepacks

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  tasks.py
.github/: copilot-instructions.md  dependabot.yaml
.github/workflows/: site.yml
docs/: index.md  project.md
docs/assets/stylesheets/: theme.css
docs/user-guide/: configuration.md  getting-started.md  installation.md  overview.md
src/openvoicepacks/: __init__.py  __main__.py  audio.py  client.py  plugin_registry.py  providers.py  sounds.py  utils.py  voicemodel.py  voicepack.py  worker.py
src/openvoicepacks/plugins/: piper.py  polly.py
src/openvoicepacks/providers/: __init__.py  base.py  piper.py  polly.py
src/openvoicepacks/templates/: functions.j2  functions.jinja  voicepack.j2  voicepack.yaml.jinja
src/openvoicepacks/voicemodels/: __init__.py
tests/: __init__.py  test_audio.py  test_client.py  test_providers.py  test_sounds.py  test_utils.py  test_voicemodel.py  test_voicepack.py
tests/plugins/: test_all.py  test_piper.py  test_polly.py
tests/providers/: __init__.py  test_all.py  test_base.py  test_piper.py  test_polly.py
